tests/typing/faulty_assignment_a.sy
start :: fn do
    a := 1
    a = 3
    a = "abc"
end
// error: $Mismatch
